--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">tcrypto</string>
+    <string name="app_name">MultiCrypto</string>
     <string name="action_settings">Settings</string>
     <string name="action_net_demo">Connection Demo</string>
     <string name="title_activity_net_log">Connection Activity Log</string>
