begin sketch of the wifi peer to peer network

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="title_activity_net_log">Connection Activity Log</string>
     <string name="set_init_params">You need to set init parameters.</string>
     <string name="set_init_param_button">Set init parameters</string>
+    <string name="enable_wifi_button">Enable WIFI</string>
+    <string name="detect_devices_button">Detect Devices</string>
     <string name="choose_file_button">Choose File to encrypt</string>
 </resources>
