--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="enable_wifi_button">Enable WIFI</string>
     <string name="detect_devices_button">Detect Devices</string>
     <string name="choose_file_button">Choose File to encrypt</string>
+    <string name="dialog_choose_the_option">Choose the option</string>
+    <string name="dialog_encrypt_button">Encrypt</string>
+    <string name="dialog_decrypt_button">Decrypt</string>
+    <string name="my_files">Мои файлы</string>
 </resources>
